Fixes #456 by removing whitespace wrapping on SingleSelect

--- a/src/components/SingleSelect/SingleSelect.less
+++ b/src/components/SingleSelect/SingleSelect.less
@@ -18,6 +18,7 @@
 		line-height: @size-standard-height;
 		padding: 0 @size-standard;
 		align-items: center;
+		white-space: nowrap;
 
 		&-content {
 			display: flex;
